# research

./: .gitignore  Dockerfile  README.md  docker-compose.yml
pydantic-fields/: README.md  _summary.md  error_examples.py  field_examples.py  notes.md
python-3d-modeling-libs/: README.md  _summary.md  blender_script.py  open3d_example.py  pyproject.toml  trimesh_example.py
python-async-tools/: .gitignore  README.md  _summary.md  notes.md  pyproject.toml
python-async-tools/results/: latest.json
python-async-tools/src/python_async_tools/: __init__.py  backends.py  plotting.py  runner.py  utils.py
python-async-tools/src/python_async_tools/benchmarks/: __init__.py  cancellation.py  io_bound.py  task_spawn.py
python-rpc-alternatives/: README.md  _summary.md  notes.md
python-rpc-alternatives/examples/capnp/: calculator.capnp  client.py  server.py
python-rpc-alternatives/examples/jsonrpc/: client.py  server.py
python-rpc-alternatives/examples/msgpackrpc/: client.py  server.py
python-rpc-alternatives/examples/rpyc/: client.py  server.py
python-rpc-alternatives/examples/soap/: client.py  service.py
python-rpc-alternatives/examples/thrift/: calculator.thrift  client.py  server.py
python-rpc-alternatives/examples/zeromq_msgpack/: client.py  server.py
python-rss-tools/: README.md  _summary.md  notes.md
python-rss-tools/examples/: aiofeedparser_basic.py  feedgen_basic.py  feedparser_basic.py  podcastparser_basic.py  reader_basic.py  rss2gen_basic.py
